# celery-poc

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  constants.py  dependencies.py  main.py
app/subscription/: exceptions.py  router.py  schemas.py  tasks.py  worker.py
tests/: http-client.env.json  test_main.http
tests/subscription/: test_subscription.http
