[tool.poetry]
name = "Celery PoC"
version = "0.1.0"
description = "Celery Distributed Tasks PoC"
authors = ["Bence Petho <bence.petho@prodapt.com>"]

[tool.poetry.dependencies]
python = "^3.11"
celery = { extras = ["redis"], version = "^5.2.7" }
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^23.3.0" }
mypy = "^1.3.0"
ruff = "^0.0.269"

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
